# xz_for_cpp

./: CMakeLists.txt  buildForArmeabi-v7a.sh  main.cpp  p.sh  r.sh
data/: 2020090100382966.txt.xz
libs/lzma/include_bak/: lzma.h
scripts/: build_lzma_android.sh  build_lzma_linux.sh  liblzma.vcxproj
src/xz/: decode.cpp
